Alternative method for overflow fix

--- a/tbx/core/static/torchbox/css/components/_container.scss
+++ b/tbx/core/static/torchbox/css/components/_container.scss
@@ -21,6 +21,7 @@
 
 	@media #{$tablet} {
 		padding: 0 20px;
+  		height: 69px;
 	}
 
 	@media #{$tablet-large} {
